Fixing fluid container, removing overflow

--- a/client/src/components/Container/style.css
+++ b/client/src/components/Container/style.css
@@ -4,7 +4,5 @@
   opacity: 0.9;
   padding: 10px;
   padding-bottom: 10px;
-  height: 70vh;
-  overflow: scroll;
   border-radius: 20px;
 }
